@@ -160,3 +160,4 @@ allow_subdoms=Allow creation of sub-domains?,1,1-Yes,0-No,-Decide automatically
 mem_cmd=Command to get memory usage,3,Query operating system
 api_helper=Path to create API helper command,3,Determine automatically
 fcgid_max=Maximum fcgid execution time,10,-From PHP configuration,*-Don't set,Time in seconds
+tar_cmd=Full path to tar command,3,Detect automatically
