@@ -1,0 +1,9 @@
+<header>Full path to tar command</header>
+
+By default, Virtualmin will use the first command named <tt>tar</tt> that
+it finds on the program search path for backups. However, you can specify
+an alternate command using this field, such as a GNU TAR which typically
+has the command name <tt>gtar</tt>. <p>
+
+<footer>
+
