@@ -1055,3 +1055,4 @@ The default TTL for DNS domains (set using the $ttl line in the zone file) can n
 Added commands to be run before and after scheduled backups, settable on the Edit Scheduled Backup page.
 Added an option to the Script Installers page to deny access to new script types by default.
 Backups and restores to S3 buckets in Europe are now fully supported.
+Added a Module Config field under Advanced options for specifying the path to an alternate tar command.
